--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<title>Our Funky HTML Page</title>
-<meta name="description" content="Our first page">
-<meta name="keywords" content="html tutorial template">
+  <title>Cat Boxes</title>
+  <style>
+    .box {
+      display: inline-block;
+      width: 150px;
+      height: 200px;
+      border: 1px solid black;
+      text-align: center;
+      margin: 5px;
+    }
+  </style>
 </head>
 <body>
-Content goes here.
+  <div class="box">
+    <img src="cat.jpg" alt="Cat">
+    <br>
+    <input type="text" value="Hi">
+  </div>
+  <!-- Repeat the box divs to create more boxes -->
+  <!-- Total of 6 boxes per line -->
+
+  <div class="box">
+    <img src="cat.jpg" alt="Cat">
+    <br>
+    <input type="text" value="Hi">
+  </div>
+
+  <div class="box">
+    <img src="cat.jpg" alt="Cat">
+    <br>
+    <input type="text" value="Hi">
+  </div>
+
+  <div class="box">
+    <img src="cat.jpg" alt="Cat">
+    <br>
+    <input type="text" value="Hi">
+  </div>
+
+  <div class="box">
+    <img src="cat.jpg" alt="Cat">
+    <br>
+    <input type="text" value="Hi">
+  </div>
+
+  <div class="box">
+    <img src="cat.jpg" alt="Cat">
+    <br>
+    <input type="text" value="Hi">
+  </div>
+
+  <!-- Repeat the box divs to create more boxes -->
+  <!-- Total of 6 boxes per line -->
 </body>
 </html>
