--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
   <title>Cat Boxes</title>
   <style>
+    .container {
+      text-align: center;
+    }
+    
     .box {
       display: inline-block;
       width: 150px;
+      height: 200px;
+      border: 1px solid black;
       text-align: center;
       margin: 5px;
+      border-radius: 10px;
     }
     
     .box img {
@@ -19,51 +26,53 @@
   </style>
 </head>
 <body>
-  <div class="box">
-    <img src="cat.jpg" alt="Cat">
-    <br>
-    <input type="text" value="Hi">
-  </div>
-  <!-- Repeat the box divs to create more boxes -->
-  <!-- Total of 6 boxes per line -->
+  <div class="container">
+    <div class="box">
+      <img src="cat.jpg" alt="Cat">
+      <br>
+      <input type="text" value="Hi">
+    </div>
+    <!-- Repeat the box divs to create more boxes -->
+    <!-- Total of 6 boxes per line -->
 
-  <div class="box">
-    <img src="cat.jpg" alt="Cat">
-    <br>
-    <input type="text" value="Hi">
-  </div>
+    <div class="box">
+      <img src="cat.jpg" alt="Cat">
+      <br>
+      <input type="text" value="Hi">
+    </div>
 
-  <div class="box">
-    <img src="cat.jpg" alt="Cat">
-    <br>
-    <input type="text" value="Hi">
-  </div>
+    <div class="box">
+      <img src="cat.jpg" alt="Cat">
+      <br>
+      <input type="text" value="Hi">
+    </div>
 
-  <div class="box">
-    <img src="cat.jpg" alt="Cat">
-    <br>
-    <input type="text" value="Hi">
-  </div>
+    <div class="box">
+      <img src="cat.jpg" alt="Cat">
+      <br>
+      <input type="text" value="Hi">
+    </div>
 
-  <div class="box">
-    <img src="cat.jpg" alt="Cat">
-    <br>
-    <input type="text" value="Hi">
-  </div>
+    <div class="box">
+      <img src="cat.jpg" alt="Cat">
+      <br>
+      <input type="text" value="Hi">
+    </div>
 
-  <div class="box">
-    <img src="cat.jpg" alt="Cat">
-    <br>
-    <input type="text" value="Hi">
-  </div>
+    <div class="box">
+      <img src="cat.jpg" alt="Cat">
+      <br>
+      <input type="text" value="Hi">
+    </div>
 
-  <div class="box">
-    <img src="cat.jpg" alt="Cat">
-    <br>
-    <input type="text" value="Hi">
-  </div>
+    <div class="box">
+      <img src="cat.jpg" alt="Cat">
+      <br>
+      <input type="text" value="Hi">
+    </div>
 
-  <!-- Repeat the box divs to create more boxes -->
-  <!-- Total of 6 boxes per line -->
+    <!-- Repeat the box divs to create more boxes -->
+    <!-- Total of 6 boxes per line -->
+  </div>
 </body>
 </html>
