--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     
     .box {
       display: inline-block;
-      width: 150px;
-      height: 200px;
+      width: 180px;
+      height: 220px;
       border: 1px solid black;
       text-align: center;
       margin: 5px;
@@ -22,6 +22,13 @@
       height: auto;
       display: block;
       margin: 0 auto;
+    }
+    
+    .box input[type="text"] {
+      margin-top: auto;
+      width: 80%;
+      margin-left: 10%;
+      margin-bottom: 10px;
     }
   </style>
 </head>
