--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <div class="container">
     <div class="box">
-      <img src="cat.jpg" alt="Cat">
+      <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
       <br>
       <input type="text" value="Hi">
     </div>
