--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       width: 80%;
       margin-left: 10%;
       margin-bottom: 10px;
+      border: none; /* Removes the text box outline */
+      text-align: center;
     }
   </style>
 </head>
@@ -37,45 +39,39 @@
     <div class="box">
       <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
       <br>
-      <input type="text" value="Hi">
+      <input type="text" value="Reborn God&#10;Value: 500">
     </div>
     <!-- Repeat the box divs to create more boxes -->
     <!-- Total of 6 boxes per line -->
 
     <div class="box">
-      <img src="cat.jpg" alt="Cat">
+      <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
       <br>
-      <input type="text" value="Hi">
+      <input type="text" value="Reborn God&#10;Value: 500">
     </div>
 
     <div class="box">
-      <img src="cat.jpg" alt="Cat">
+      <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
       <br>
-      <input type="text" value="Hi">
+      <input type="text" value="Reborn God&#10;Value: 500">
     </div>
 
     <div class="box">
-      <img src="cat.jpg" alt="Cat">
+      <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
       <br>
-      <input type="text" value="Hi">
+      <input type="text" value="Reborn God&#10;Value: 500">
     </div>
 
     <div class="box">
-      <img src="cat.jpg" alt="Cat">
+      <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
       <br>
-      <input type="text" value="Hi">
+      <input type="text" value="Reborn God&#10;Value: 500">
     </div>
 
     <div class="box">
-      <img src="cat.jpg" alt="Cat">
+      <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
       <br>
-      <input type="text" value="Hi">
-    </div>
-
-    <div class="box">
-      <img src="cat.jpg" alt="Cat">
-      <br>
-      <input type="text" value="Hi">
+      <input type="text" value="Reborn God&#10;Value: 500">
     </div>
 
     <!-- Repeat the box divs to create more boxes -->
