--- a/index.html
+++ b/index.html
@@ -15,22 +15,25 @@
       text-align: center;
       margin: 5px;
       border-radius: 10px;
+      position: relative;
+      background-color: blue;
     }
     
     .box img {
       max-width: 100%;
       height: auto;
       display: block;
-      margin: 0 auto;
+      margin: 15px auto 0;
     }
     
-    .box input[type="text"] {
-      margin-top: auto;
+    .box .text1,
+    .box .text2 {
+      position: absolute;
+      bottom: 15px;
       width: 80%;
-      margin-left: 10%;
-      margin-bottom: 10px;
-      border: none; /* Removes the text box outline */
+      left: 10%;
       text-align: center;
+      color: white;
     }
   </style>
 </head>
@@ -38,40 +41,40 @@
   <div class="container">
     <div class="box">
       <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
-      <br>
-      <input type="text" value="Reborn God&#10;Value: 500">
+      <div class="text1">Reborn God</div>
+      <div class="text2">Value: 500</div>
     </div>
     <!-- Repeat the box divs to create more boxes -->
     <!-- Total of 6 boxes per line -->
 
     <div class="box">
       <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
-      <br>
-      <input type="text" value="Reborn God&#10;Value: 500">
+      <div class="text1">Reborn God</div>
+      <div class="text2">Value: 500</div>
     </div>
 
     <div class="box">
       <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
-      <br>
-      <input type="text" value="Reborn God&#10;Value: 500">
+      <div class="text1">Reborn God</div>
+      <div class="text2">Value: 500</div>
     </div>
 
     <div class="box">
       <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
-      <br>
-      <input type="text" value="Reborn God&#10;Value: 500">
+      <div class="text1">Reborn God</div>
+      <div class="text2">Value: 500</div>
     </div>
 
     <div class="box">
       <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
-      <br>
-      <input type="text" value="Reborn God&#10;Value: 500">
+      <div class="text1">Reborn God</div>
+      <div class="text2">Value: 500</div>
     </div>
 
     <div class="box">
       <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
-      <br>
-      <input type="text" value="Reborn God&#10;Value: 500">
+      <div class="text1">Reborn God</div>
+      <div class="text2">Value: 500</div>
     </div>
 
     <!-- Repeat the box divs to create more boxes -->
