--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     .container {
       text-align: center;
-      background-color: cyan;
+      background-color: #2CBB78;
       padding: 10px;
     }
     
@@ -34,6 +34,8 @@
       width: 100%;
       text-align: center;
       color: white;
+      font-size: 16px;
+      font-family: 'Comic Sans MS', cursive;
     }
     
     .text1 {
@@ -60,12 +62,6 @@
     </div>
     <!-- Repeat the box divs to create more boxes -->
     <!-- Total of 6 boxes per line -->
-
-    <div class="box">
-      <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
-      <div class="text1">First text box</div>
-      <div class="text2">Value: 500</div>
-    </div>
 
     <div class="box">
       <img src="https://tr.rbxcdn.com/e04978d68f92509335a53a612d7aab46/150/150/Image/Png" alt="Cat">
