--- a/index.html
+++ b/index.html
@@ -67,10 +67,13 @@
       background-color: lightgray;
       margin-right: 5px;
       cursor: pointer;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: 70%;
     }
     
     .title {
-      font-size: 24px;
+      font-size: 32px;
       color: white;
       margin-top: 10px;
     }
@@ -79,9 +82,9 @@
 <body>
   <div class="container">
     <div class="buttons">
-      <a href="https://www.example1.com" class="button"></a>
-      <a href="https://www.example2.com" class="button"></a>
-      <a href="https://www.example3.com" class="button"></a>
+      <a href="https://www.example1.com" class="button" style="background-image: url('image1.jpg');"></a>
+      <a href="https://www.example2.com" class="button" style="background-image: url('image2.jpg');"></a>
+      <a href="https://www.example3.com" class="button" style="background-image: url('image3.jpg');"></a>
     </div>
     <h1 class="title">Cat Boxes</h1>
     <div class="box">
