--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
   <div class="container">
     <div class="buttons">
-      <a href="https://www.example1.com" class="button" style="background-image: url('image1.jpg');"></a>
+      <a href="https://www.example1.com" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130151146539978752/discord-icon-2048x2048-wooh9l0j.png?width=585&height=585');"></a>
       <a href="https://www.example2.com" class="button" style="background-image: url('image2.jpg');"></a>
       <a href="https://www.example3.com" class="button" style="background-image: url('image3.jpg');"></a>
     </div>
