--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       cursor: pointer;
       background-position: center;
       background-repeat: no-repeat;
-      background-size: 70%;
+      background-size: contain;
     }
     
     .title {
@@ -83,8 +83,8 @@
   <div class="container">
     <div class="buttons">
       <a href="https://www.example1.com" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130151146539978752/discord-icon-2048x2048-wooh9l0j.png?width=585&height=585');"></a>
-      <a href="https://www.example2.com" class="button" style="background-image: url('image2.jpg');"></a>
-      <a href="https://www.example3.com" class="button" style="background-image: url('image3.jpg');"></a>
+      <a href="https://www.example2.com" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130151146539978752/discord-icon-2048x2048-wooh9l0j.png?width=585&height=585');"></a>
+      <a href="https://www.example3.com" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130151146539978752/discord-icon-2048x2048-wooh9l0j.png?width=585&height=585');"></a>
     </div>
     <h1 class="title">Cat Boxes</h1>
     <div class="box">
