--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
   <div class="container">
     <div class="buttons">
-      <a href="www.credits.bgmvalues.com" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130153297286807662/png-transparent-computer-icons-question-mark-button-question-mark-blue-text-trademark.png?width=585&height=585');"></a>
+      <a href="https://credits.bgmvalues.com" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130153297286807662/png-transparent-computer-icons-question-mark-button-question-mark-blue-text-trademark.png?width=585&height=585');"></a>
       <a href="https://plsdonate.me/Astro_Developer" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130152355325812837/png-transparent-dollar-sign-illustration-united-states-dollar-icon-design-icon-dollar-sign-text-logo-number.png?width=585&height=585');"></a>
       <a href="https://discord.gg/BQw8RqDzBx" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130151146539978752/discord-icon-2048x2048-wooh9l0j.png?width=585&height=585');"></a>
     </div>
