--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <a href="https://plsdonate.me/Astro_Developer" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130152355325812837/png-transparent-dollar-sign-illustration-united-states-dollar-icon-design-icon-dollar-sign-text-logo-number.png?width=585&height=585');"></a>
       <a href="https://discord.gg/BQw8RqDzBx" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130151146539978752/discord-icon-2048x2048-wooh9l0j.png?width=585&height=585');"></a>
     </div>
-    <h1 class="title">Ccontributors</h1>
+    <h1 class="title">Contributors</h1>
     <div class="box">
       <img src="https://cdn.discordapp.com/avatars/770995245500203060/2ea8f7993fe5b8418d5eef716d75b643.webp?size=128" alt="Cat">
       <div class="text1">Cole#1108</div>
