--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
     </div>
     <h1 class="title">Contributors</h1>
     <div class="box">
-      <img src="https://cdn.discordapp.com/avatars/770995245500203060/2ea8f7993fe5b8418d5eef716d75b643.webp?size=128" alt="Cat">
-      <div class="text1">Cole#1108</div>
-      <div class="text2">Pro HTML Coder</div>
+      <img src="https://images-ext-1.discordapp.net/external/5aNJfy4O74w0ZGPTF-jTbq436ZH2fi8Rn4BJAx_0s7A/https/tr.rbxcdn.com/6c0c6b82dea3002170fc4369fc8af0b9/150/150/Image/Png?width=140&height=140" alt="Cat">
+      <div class="text1">King Doggy</div>
+      <div class="text2">1</div>
     </div>
     <!-- Repeat the box divs to create more boxes -->
     <!-- Total of 7 boxes per line -->
