--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <a href="https://plsdonate.me/Astro_Developer" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130152355325812837/png-transparent-dollar-sign-illustration-united-states-dollar-icon-design-icon-dollar-sign-text-logo-number.png?width=585&height=585');"></a>
       <a href="https://discord.gg/BQw8RqDzBx" class="button" style="background-image: url('https://media.discordapp.net/attachments/995351490472464494/1130151146539978752/discord-icon-2048x2048-wooh9l0j.png?width=585&height=585');"></a>
     </div>
-    <h1 class="title">Contributors</h1>
+    <h1 class="title">Bubble Gum Mayhem Values</h1>
     <div class="box">
       <img src="https://images-ext-1.discordapp.net/external/5aNJfy4O74w0ZGPTF-jTbq436ZH2fi8Rn4BJAx_0s7A/https/tr.rbxcdn.com/6c0c6b82dea3002170fc4369fc8af0b9/150/150/Image/Png?width=140&height=140" alt="Cat">
       <div class="text1">King Doggy</div>
