--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       color: white;
       font-size: 12px;
       font-family: 'Comic Sans MS', cursive;
-      margin: 2px 0;
+      padding: 2px;
+      line-height: 1.2;
     }
     
     /* Remove box outline */
