--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>BGMValues</title>
-  <link rel="icon" href="https://media.discordapp.net/attachments/1110002620891938936/1130265373833441310/799af81c2b891f8debb751f937ab2125.png?width=90&height=90" type="image/png"> <!-- Replace "icon.png" with the path to your icon image file -->
+  <link rel="icon" href="" type="image/png"> <!-- Replace "icon.png" with the path to your icon image file -->
   <style>
     * {
       box-sizing: border-box;
@@ -16,7 +16,7 @@
     .container {
       text-align: center;
       background-color: #2CBB78;
-      padding: 50px;
+      padding: 10px;
     }
     
     .box {
@@ -46,7 +46,7 @@
       font-size: 12px;
       font-family: 'Comic Sans MS', cursive;
       padding: 2px;
-      line-height: 1.2;
+      line-height: 2;
     }
     
     /* Remove box outline */
