--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>BGMValues</title>
-  <link rel="icon" href="" type="image/png"> <!-- Replace "icon.png" with the path to your icon image file -->
+  <link rel="icon" href="icon.png" type="image/png"> <!-- Replace "icon.png" with the path to your icon image file -->
   <style>
     * {
       box-sizing: border-box;
@@ -46,7 +46,8 @@
       font-size: 12px;
       font-family: 'Comic Sans MS', cursive;
       padding: 2px;
-      line-height: 2;
+      line-height: 1.2;
+      overflow-wrap: break-word;
     }
     
     /* Remove box outline */
