--- a/index.html
+++ b/index.html
@@ -165,17 +165,17 @@
     <h1 class="title">Bubble Gum Mayhem Values</h1>
     <div class="box">
       <img src="https://images-ext-1.discordapp.net/external/5aNJfy4O74w0ZGPTF-jTbq436ZH2fi8Rn4BJAx_0s7A/https/tr.rbxcdn.com/6c0c6b82dea3002170fc4369fc8af0b9/150/150/Image/Png?width=140&height=140" alt="Cat">
-      <div class="text1">King Doggy</div>
-      <div class="text2">Value: 1</div>
-      <div class="text3">Additional Text 1</div>
-      <div class="text4">Additional Text 2</div>
-      <div class="text5">Additional Text 3</div>
-      <div class="text6">Additional Text 4</div>
-      <div class="text7">Additional Text 5</div>
-      <div class="text8">Additional Text 6</div>
-      <div class="text9">Additional Text 7</div>
-      <div class="text10">Additional Text 8</div>
-      <div class="text11">Additional Text 9</div>
+      <div class="text1">Release Trophy</div>
+      <div class="text2">🍀 1 in 2.5 Million</div>
+      <div class="text3">Normal:🥚346|4.5k|Demand:8/10</div>
+      <div class="text4">Shiny:🥚62|20k|Demand:8.5/10</div>
+      <div class="text5">Chroma:🥚14|75k|Demand:9/10</div>
+      <div class="text6">Void:🥚4|210k|Demand:10/10</div>
+      <div class="text7">Glitch:🥚2|440k|Demand:10/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Rising</div>
     </div>
     <!-- Repeat the box divs to create more boxes -->
     <!-- Total of 7 boxes per line -->
