--- a/index.html
+++ b/index.html
@@ -195,7 +195,65 @@
       <div class="text11">Status:Rising</div>
     </div>
     
-    <!-- Add more boxes here -->
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130280098348675092/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Release Retriever</div>
+      <div class="text2">🍀 1 in 4 Million</div>
+      <div class="text3">Normal:🥚208|5k|Demand:8/10</div>
+      <div class="text4">Shiny:🥚32|28k|Demand:8.5/10</div>
+      <div class="text5">Chroma:🥚7|135k|Demand:9/10</div>
+      <div class="text6">Void:🥚1|O/C|Demand:10/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Rising</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130280561873797200/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Solar Energy</div>
+      <div class="text2">🍀 1 in 10 Million</div>
+      <div class="text3">Normal:🥚83|12k|Demand:8.5/10</div>
+      <div class="text4">Shiny:🥚10|95k|Demand:9/10</div>
+      <div class="text5">Chroma:🥚2|440k|Demand:10/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Rising</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130280930574082078/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Radiant Gem</div>
+      <div class="text2">🍀 1 in 20 Million</div>
+      <div class="text3">Normal:🥚45|23k|Demand:9/10</div>
+      <div class="text4">Shiny:🥚6|135k|Demand:9.5/10</div>
+      <div class="text5">Chroma:🥚2|495k|Demand:10/10</div>
+      <div class="text6">Void:🥚1|O/C|Demand:10/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Rising</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130278179882401883/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Angelic Club Card</div>
+      <div class="text2">🍀 1 in 5 Million</div>
+      <div class="text3">Normal:🥚2309|430|Demand:6/10</div>
+      <div class="text4">Shiny:🥚340|2.9k|Demand:7/10</div>
+      <div class="text5">Chroma:🥚58|17k|Demand:7.5/10</div>
+      <div class="text6">Void:🥚12|84k|Demand:8.5/10</div>
+      <div class="text7">Glitch:🥚1|O/C|Demand:10/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Stable</div>
+    </div>
     
   </div>
 </body>
