--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     .container {
       text-align: center;
-      background-color: #2CBB78;
+      background-color: #226e93;
       padding: 10px;
     }
     
