--- a/index.html
+++ b/index.html
@@ -390,6 +390,80 @@
       <div class="text11">Status:Stable</div>
     </div>
     
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130563238371795074/0UOBmeKhEV_LMQQ81Hrz7CcO4dPLYwuh9aGl-iu71t7a1NAbxtQq5RvbMGY3PfUhVcJaDpAw8jhIx8SFpYhIQxww1280.png?width=140&height=140" alt="Cat">
+      <div class="text1">Solsticeus</div>
+      <div class="text2">🍀 1 in 20 Million</div>
+      <div class="text3">Normal:🥚442|2.5k|Demand:8/10</div>
+      <div class="text4">Shiny:🥚73|17k|Demand:8.5/10</div>
+      <div class="text5">Chroma:🥚13|80k|Demand:9/10</div>
+      <div class="text6">Void:🥚4|220k|Demand:9.5/10</div>
+      <div class="text7">Glitch:🥚3|340k|Demand:9.5/10</div>
+      <div class="text8">Godly:🥚1|O/C|Demand:10/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Rising a tiny bit</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130565049497424033/MR7Dxet1FzeX-vI0BuKfg9LS7gvOE-7zht3bllI6OdpjbY04JuJ6qFunYYzt6qVjDo-daC78lPP09uVNzLVvJVow1280.png?width=140&height=140" alt="Cat">
+      <div class="text1">aaa</div>
+      <div class="text2">🍀 1 in 125 Million</div>
+      <div class="text3">Normal:🥚58|19.5k|Demand:8/10</div>
+      <div class="text4">Shiny:🥚15|69k|Demand:9/10</div>
+      <div class="text5">Chroma:🥚3|340k|Demand:9.5/10</div>
+      <div class="text6">Void:🥚1|O/C|Demand:10/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Rising a tiny bit</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130565424245899274/DtDwLO0Y1lPJwHTUyb40n3YQjB1vnPNdI8oMCkHdzveQYD1st42Wrlw2YQpyZHUBDBLqnv6xCNXYXTA2zN_ZG635_1c-5YGUMiT55ClfzGdpMBbwvIoK9n8rdRAqB480LAw1280.png?width=114&height=114" alt="Cat">
+      <div class="text1">Kitty Capsule</div>
+      <div class="text2">🍀 1 in 20 Million</div>
+      <div class="text3">Normal:🥚417|2.4k|Demand:7.5/10</div>
+      <div class="text4">Shiny:🥚40|25k|Demand:8.5/10</div>
+      <div class="text5">Chroma:🥚9|112k|Demand:9/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Stable</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130565444642807808/MOWqTzX83mT0QFFX2QKTxrNL1RqhTWBnv2eUNmH6Oe-u0HZIsYaItQMNmNT97mRZyreM7ZgX1Rd_Qkppb1B07O1zDrg1cteUvFpJ8mVl1ql8zucjZdT-8kg12QQrwNbqw1280.png?width=101&height=101" alt="Cat">
+      <div class="text1">Doggy Capsule</div>
+      <div class="text2">🍀 1 in 20 Million</div>
+      <div class="text3">Normal:🥚469|2.1k|Demand:4/10</div>
+      <div class="text4">Shiny:🥚49|20k|Demand:5/10</div>
+      <div class="text5">Chroma:🥚7|142k|Demand:7.5/10</div>
+      <div class="text6">Void:🥚5|200k|Demand:8/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Stable</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130565461273219082/bYJ7qQc9pi21W-E0TyHIw5ZrH07iok1JJc-Yyzarx84zL08z3tMn1OziobHOpB1EXqgpLrH3gQSpnKMUmLlvRUnug96z_BkajBZEr8vYXnPLJAlNK9z37OB92Vrx23W7IAw1280.png?width=85&height=85" alt="Cat">
+      <div class="text1">Bunny Capsule</div>
+      <div class="text2">🍀 1 in 1 Million</div>
+      <div class="text3">Normal:🥚417|2.4k|Demand:4/10</div>
+      <div class="text4">Shiny:🥚54|19k|Demand:5/10</div>
+      <div class="text5">Chroma:🥚3|300k|Demand:9.5/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Stable</div>
+    </div>
     
   </div>
 </body>
