--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     
     .box img {
       max-width: 100%;
-      max-height: 100%;
+      max-height: 200px;
       display: block;
-      margin: 0 auto;
+      margin: 15px auto 0;
     }
     
     .text1,
