--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       overflow: hidden;
     }
     
-    .box img {
-      max-width: 100%;
-      max-height: 200px;
-      display: block;
-      margin: 15px auto 0;
-    }
+.box img {
+  max-width: 300px;
+  max-height: 250px;
+  display: block;
+  margin: 15px auto 0;
+}
     
     .text1,
     .text2,
