--- a/index.html
+++ b/index.html
@@ -464,6 +464,81 @@
       <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
       <div class="text11">Status:Stable</div>
     </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130924980276826122/Png.png?width=104&height=131" alt="Cat">
+      <div class="text1">Dragon Capsule</div>
+      <div class="text2">🍀 1 in 20 Million</div>
+      <div class="text3">Normal:🥚415|2.4k|Demand:4/10</div>
+      <div class="text4">Shiny:🥚50|20k|Demand:5/10</div>
+      <div class="text5">Chroma:🥚6|170k|Demand:7.5/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Stable</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130925028716855326/Png.png?width=84&height=131" alt="Cat">
+      <div class="text1">Rainbow Shock Capsule</div>
+      <div class="text2">🍀 1 in 20 Million</div>
+      <div class="text3">Normal:🥚461|2.2k|Demand:4/10</div>
+      <div class="text4">Shiny:🥚53|19k|Demand:5/10</div>
+      <div class="text5">Chroma:🥚10|100k|Demand:7.5/10</div>
+      <div class="text6">Void:🥚1|O/C|Demand:10/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Stable</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130925148275474544/Png.png?width=105&height=131" alt="Cat">
+      <div class="text1">Leviathan Capsule</div>
+      <div class="text2">🍀 1 in 250 Million</div>
+      <div class="text3">Normal:🥚26|45k|Demand:8.5/10</div>
+      <div class="text4">Shiny:🥚5|200k|Demand:10/10</div>
+      <div class="text5">Chroma:🥚0|N/A|Demand:?/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Rising due to low supply</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130926689304715344/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Vritra</div>
+      <div class="text2">🍀 1 in 12.5 Million</div>
+      <div class="text3">Normal:🥚3472|290|Demand:7/10</div>
+      <div class="text4">Shiny:🥚538|1.8k|Demand:8/10</div>
+      <div class="text5">Chroma:🥚92|12k|Demand:8.5/10</div>
+      <div class="text6">Void:🥚18|52k|Demand:9/10</div>
+      <div class="text7">Glitch:🥚5|195k|Demand:9.5/10</div>
+      <div class="text8">Godly:🥚1|O/C|Demand:10/10</div>
+      <div class="text9">Supernova:🥚1|O/C|Demand:10/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130926747802681364/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Mystic Sentinel</div>
+      <div class="text2">🍀 1 in 75 Million</div>
+      <div class="text3">Normal:🥚516|1.9k|Demand:8/10</div>
+      <div class="text4">Shiny:🥚86|12k|Demand:8.5/10</div>
+      <div class="text5">Chroma:🥚11|90k|Demand:9/10</div>
+      <div class="text6">Void:🥚2|450K|Demand:9.5/10</div>
+      <div class="text7">Glitch:🥚1|O/C|Demand:10/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
     
   </div>
 </body>
