--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
         <div class="box">
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130565049497424033/MR7Dxet1FzeX-vI0BuKfg9LS7gvOE-7zht3bllI6OdpjbY04JuJ6qFunYYzt6qVjDo-daC78lPP09uVNzLVvJVow1280.png?width=140&height=140" alt="Cat">
-      <div class="text1">aaa</div>
+      <div class="text1">Hourglaze</div>
       <div class="text2">🍀 1 in 125 Million</div>
       <div class="text3">Normal:🥚58|19.5k|Demand:8/10</div>
       <div class="text4">Shiny:🥚15|69k|Demand:9/10</div>
@@ -539,6 +539,83 @@
       <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
       <div class="text11">Status:Dropping</div>
     </div>
+
+            <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130928981433126982/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">True Luminance</div>
+      <div class="text2">🍀 1 in 15 Million</div>
+      <div class="text3">Normal:🥚1440|700|Demand:7/10</div>
+      <div class="text4">Shiny:🥚177|5.6k|Demand:7.5/10</div>
+      <div class="text5">Chroma:🥚24|42k|Demand:8.5/10</div>
+      <div class="text6">Void:🥚3|340k|Demand:9.5/10</div>
+      <div class="text7">Glitch:🥚1|O/C|Demand:10/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Stable</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130929063217877124/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Heart Of The Forest</div>
+      <div class="text2">🍀 1 in 225 Million</div>
+      <div class="text3">Normal:🥚103|9.7k|Demand:8.5/10</div>
+      <div class="text4">Shiny:🥚9|112k|Demand:9/10</div>
+      <div class="text5">Chroma:🥚2|450k|Demand:9.5/10</div>
+      <div class="text6">Void:🥚1|O/C|Demand:10/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Stable</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130929152913051699/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Reborn God</div>
+      <div class="text2">🍀 1 in 7.5 Million</div>
+      <div class="text3">Normal:🥚3978|250|Demand:7/10</div>
+      <div class="text4">Shiny:🥚620|1.6k|Demand:8/10</div>
+      <div class="text5">Chroma:🥚102|9.8k|Demand:8.5/10</div>
+      <div class="text6">Void:🥚20|50k|Demand:9/10</div>
+      <div class="text7">Glitch:🥚10|95k|Demand:9/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚1|O/C|Demand:10/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130929218801385642/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Grand Dragon</div>
+      <div class="text2">🍀 1 in 125 Million</div>
+      <div class="text3">Normal:🥚243|4.1k|Demand:8/10</div>
+      <div class="text4">Shiny:🥚41|24k|Demand:8.5/10</div>
+      <div class="text5">Chroma:🥚9|112k|Demand:9/10</div>
+      <div class="text6">Void:🥚1|O/C|Demand:10/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚1|O/C|Demand:10/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130929388230287470/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Horizon Gem</div>
+      <div class="text2">🍀 1 in 650 Million</div>
+      <div class="text3">Normal:🥚46|23k|Demand:9/10</div>
+      <div class="text4">Shiny:🥚9|112k|Demand:9.5/10</div>
+      <div class="text5">Chroma:🥚3|340k|Demand:10/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+    
     
   </div>
 </body>
