--- a/index.html
+++ b/index.html
@@ -615,6 +615,81 @@
       <div class="text11">Status:Dropping</div>
     </div>
 
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130933904711368824/Png.png?width=131&height=105" alt="Cat">
+      <div class="text1">Almighty Trophy</div>
+      <div class="text2">🍀 1 in 5 Million</div>
+      <div class="text3">Normal:🥚4537|220|Demand:7/10</div>
+      <div class="text4">Shiny:🥚512|2k|Demand:7.5/10</div>
+      <div class="text5">Chroma:🥚73|12k|Demand:8/10</div>
+      <div class="text6">Void:🥚7|135k|Demand:8.5/10</div>
+      <div class="text7">Glitch:🥚3|300k|Demand:9/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130934027268919470/Png.png?width=108&height=131" alt="Cat">
+      <div class="text1">King Koi</div>
+      <div class="text2">🍀 1 in 40 Million</div>
+      <div class="text3">Normal:🥚568|1.7k|Demand:8/10</div>
+      <div class="text4">Shiny:🥚66|15k|Demand:8.5/10</div>
+      <div class="text5">Chroma:🥚9|110k|Demand:9/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130934155354587157/Png.png?width=131&height=125" alt="Cat">
+      <div class="text1">100k Pyramidium</div>
+      <div class="text2">🍀 1 in 800 Million</div>
+      <div class="text3">Normal:🥚37|27k|Demand:9/10</div>
+      <div class="text4">Shiny:🥚1|O/C|Demand:?/10</div>
+      <div class="text5">Chroma:🥚1|O/C|Demand:10/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130934397445611601/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Strawberry Sundae</div>
+      <div class="text2">🍀 1 in 60.6 Million</div>
+      <div class="text3">Normal:🥚155|6.5k|Demand:?/10</div>
+      <div class="text4">Shiny:🥚18|40k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚1|O/C|Demand:?/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130934445558480967/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Mint Sundae</div>
+      <div class="text2">🍀 1 in 60.6 Million</div>
+      <div class="text3">Normal:🥚156|6.5k|Demand:?/10</div>
+      <div class="text4">Shiny:🥚15|43k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚4|195k|Demand:?/10</div>
+      <div class="text6">Void:🥚1|O/C|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
     
     
   </div>
