--- a/index.html
+++ b/index.html
@@ -690,6 +690,65 @@
       <div class="text11">Status:Dropping</div>
     </div>
 
+            <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130937120043843695/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Chocolate Sundae</div>
+      <div class="text2">🍀 1 in 60.6 Million</div>
+      <div class="text3">Normal:🥚137|7.2k|Demand:?/10</div>
+      <div class="text4">Shiny:🥚16|42k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚3|300K|Demand:?/10</div>
+      <div class="text6">Void:🥚1|O/C|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130937173777055894/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Vanilla Sundae</div>
+      <div class="text2">🍀 1 in 60.6 Million</div>
+      <div class="text3">Normal:🥚138|7.2k|Demand:?/10</div>
+      <div class="text4">Shiny:🥚24|37k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚2|450k|Demand:?/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130937225404747907/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Eternal Cucumber</div>
+      <div class="text2">🍀 1 in 5 Million</div>
+      <div class="text3">Normal:🥚626|1.6K|Demand:?/10</div>
+      <div class="text4">Shiny:🥚60|15k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚9|105K|Demand:?/10</div>
+      <div class="text6">Void:🥚2|450K|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1130937281520345109/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Dragonfruit</div>
+      <div class="text2">🍀 1 in 20 Million</div>
+      <div class="text3">Normal:🥚178|5.6k|Demand:?/10</div>
+      <div class="text4">Shiny:🥚11|70k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚2|400K|Demand:?/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
     
     
   </div>
