--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       position: absolute;
       width: 100%;
       text-align: center;
-      color: white;
+      color: black;
       font-size: 12px;
       font-family: 'Comic Sans MS', cursive;
       margin-top: 5px;
