--- a/index.html
+++ b/index.html
@@ -514,9 +514,9 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130926689304715344/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Vritra</div>
       <div class="text2">🍀 1 in 12.5 Million</div>
-      <div class="text3">Normal:🥚3472|290|Demand:7/10</div>
-      <div class="text4">Shiny:🥚538|1.8k|Demand:8/10</div>
-      <div class="text5">Chroma:🥚92|12k|Demand:8.5/10</div>
+      <div class="text3">Normal:🥚3844|290|Demand:7/10</div>
+      <div class="text4">Shiny:🥚614|1.8k|Demand:8/10</div>
+      <div class="text5">Chroma:🥚98|12k|Demand:8.5/10</div>
       <div class="text6">Void:🥚18|52k|Demand:9/10</div>
       <div class="text7">Glitch:🥚5|195k|Demand:9.5/10</div>
       <div class="text8">Godly:🥚1|O/C|Demand:10/10</div>
@@ -529,9 +529,9 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130926747802681364/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Mystic Sentinel</div>
       <div class="text2">🍀 1 in 75 Million</div>
-      <div class="text3">Normal:🥚516|1.9k|Demand:8/10</div>
-      <div class="text4">Shiny:🥚86|12k|Demand:8.5/10</div>
-      <div class="text5">Chroma:🥚11|90k|Demand:9/10</div>
+      <div class="text3">Normal:🥚604|1.9k|Demand:8/10</div>
+      <div class="text4">Shiny:🥚94|12k|Demand:8.5/10</div>
+      <div class="text5">Chroma:🥚12|90k|Demand:9/10</div>
       <div class="text6">Void:🥚2|450K|Demand:9.5/10</div>
       <div class="text7">Glitch:🥚1|O/C|Demand:10/10</div>
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
@@ -544,9 +544,9 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130928981433126982/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">True Luminance</div>
       <div class="text2">🍀 1 in 15 Million</div>
-      <div class="text3">Normal:🥚1440|700|Demand:7/10</div>
-      <div class="text4">Shiny:🥚177|5.6k|Demand:7.5/10</div>
-      <div class="text5">Chroma:🥚24|42k|Demand:8.5/10</div>
+      <div class="text3">Normal:🥚1731|700|Demand:7/10</div>
+      <div class="text4">Shiny:🥚206|5.6k|Demand:7.5/10</div>
+      <div class="text5">Chroma:🥚30|42k|Demand:8.5/10</div>
       <div class="text6">Void:🥚3|340k|Demand:9.5/10</div>
       <div class="text7">Glitch:🥚1|O/C|Demand:10/10</div>
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
@@ -559,10 +559,10 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130929063217877124/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Heart Of The Forest</div>
       <div class="text2">🍀 1 in 225 Million</div>
-      <div class="text3">Normal:🥚103|9.7k|Demand:8.5/10</div>
-      <div class="text4">Shiny:🥚9|112k|Demand:9/10</div>
-      <div class="text5">Chroma:🥚2|450k|Demand:9.5/10</div>
-      <div class="text6">Void:🥚1|O/C|Demand:10/10</div>
+      <div class="text3">Normal:🥚118|9.7k|Demand:8.5/10</div>
+      <div class="text4">Shiny:🥚11|112k|Demand:9/10</div>
+      <div class="text5">Chroma:🥚3|450k|Demand:9.5/10</div>
+      <div class="text6">Void:🥚2|O/C|Demand:10/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
@@ -574,12 +574,12 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130929152913051699/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Reborn God</div>
       <div class="text2">🍀 1 in 7.5 Million</div>
-      <div class="text3">Normal:🥚3978|250|Demand:7/10</div>
-      <div class="text4">Shiny:🥚620|1.6k|Demand:8/10</div>
-      <div class="text5">Chroma:🥚102|9.8k|Demand:8.5/10</div>
-      <div class="text6">Void:🥚20|50k|Demand:9/10</div>
-      <div class="text7">Glitch:🥚10|95k|Demand:9/10</div>
-      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text3">Normal:🥚4912|200|Demand:7/10</div>
+      <div class="text4">Shiny:🥚730|1.4k|Demand:8/10</div>
+      <div class="text5">Chroma:🥚117|9k|Demand:8.5/10</div>
+      <div class="text6">Void:🥚23|46k|Demand:9/10</div>
+      <div class="text7">Glitch:🥚11|92k|Demand:9/10</div>
+      <div class="text8">Godly:🥚1|O/C|Demand:?/10</div>
       <div class="text9">Supernova:🥚1|O/C|Demand:10/10</div>
       <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
       <div class="text11">Status:Dropping</div>
@@ -589,7 +589,7 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130929218801385642/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Grand Dragon</div>
       <div class="text2">🍀 1 in 125 Million</div>
-      <div class="text3">Normal:🥚243|4.1k|Demand:8/10</div>
+      <div class="text3">Normal:🥚291|3.4k|Demand:8/10</div>
       <div class="text4">Shiny:🥚41|24k|Demand:8.5/10</div>
       <div class="text5">Chroma:🥚9|112k|Demand:9/10</div>
       <div class="text6">Void:🥚1|O/C|Demand:10/10</div>
@@ -604,10 +604,10 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130929388230287470/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Horizon Gem</div>
       <div class="text2">🍀 1 in 650 Million</div>
-      <div class="text3">Normal:🥚46|23k|Demand:9/10</div>
-      <div class="text4">Shiny:🥚9|112k|Demand:9.5/10</div>
-      <div class="text5">Chroma:🥚3|340k|Demand:10/10</div>
-      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text3">Normal:🥚56|18k|Demand:9/10</div>
+      <div class="text4">Shiny:🥚9|110k|Demand:9.5/10</div>
+      <div class="text5">Chroma:🥚3|300k|Demand:10/10</div>
+      <div class="text6">Void:🥚1|O/C|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
@@ -619,11 +619,11 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130933904711368824/Png.png?width=131&height=105" alt="Cat">
       <div class="text1">Almighty Trophy</div>
       <div class="text2">🍀 1 in 5 Million</div>
-      <div class="text3">Normal:🥚4537|220|Demand:7/10</div>
-      <div class="text4">Shiny:🥚512|2k|Demand:7.5/10</div>
-      <div class="text5">Chroma:🥚73|12k|Demand:8/10</div>
-      <div class="text6">Void:🥚7|135k|Demand:8.5/10</div>
-      <div class="text7">Glitch:🥚3|300k|Demand:9/10</div>
+      <div class="text3">Normal:🥚7078|140|Demand:7/10</div>
+      <div class="text4">Shiny:🥚823|1.2k|Demand:7.5/10</div>
+      <div class="text5">Chroma:🥚124|8K|Demand:8/10</div>
+      <div class="text6">Void:🥚13|85k|Demand:8.5/10</div>
+      <div class="text7">Glitch:🥚6|150k|Demand:9/10</div>
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
       <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
@@ -634,8 +634,8 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130934027268919470/Png.png?width=108&height=131" alt="Cat">
       <div class="text1">King Koi</div>
       <div class="text2">🍀 1 in 40 Million</div>
-      <div class="text3">Normal:🥚568|1.7k|Demand:8/10</div>
-      <div class="text4">Shiny:🥚66|15k|Demand:8.5/10</div>
+      <div class="text3">Normal:🥚858|1165|Demand:8/10</div>
+      <div class="text4">Shiny:🥚128|7.8k|Demand:8.5/10</div>
       <div class="text5">Chroma:🥚9|110k|Demand:9/10</div>
       <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
