--- a/index.html
+++ b/index.html
@@ -649,8 +649,8 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130934155354587157/Png.png?width=131&height=125" alt="Cat">
       <div class="text1">100k Pyramidium</div>
       <div class="text2">🍀 1 in 800 Million</div>
-      <div class="text3">Normal:🥚37|27k|Demand:9/10</div>
-      <div class="text4">Shiny:🥚1|O/C|Demand:?/10</div>
+      <div class="text3">Normal:🥚52|19k|Demand:9/10</div>
+      <div class="text4">Shiny:🥚2|450K|Demand:?/10</div>
       <div class="text5">Chroma:🥚1|O/C|Demand:10/10</div>
       <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
@@ -664,10 +664,10 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130934397445611601/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Strawberry Sundae</div>
       <div class="text2">🍀 1 in 60.6 Million</div>
-      <div class="text3">Normal:🥚155|6.5k|Demand:?/10</div>
-      <div class="text4">Shiny:🥚18|40k|Demand:?/10</div>
-      <div class="text5">Chroma:🥚1|O/C|Demand:?/10</div>
-      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text3">Normal:🥚565|1.7k|Demand:?/10</div>
+      <div class="text4">Shiny:🥚75|13k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚8|115K|Demand:?/10</div>
+      <div class="text6">Void:🥚2|450K|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
@@ -679,10 +679,10 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130934445558480967/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Mint Sundae</div>
       <div class="text2">🍀 1 in 60.6 Million</div>
-      <div class="text3">Normal:🥚156|6.5k|Demand:?/10</div>
-      <div class="text4">Shiny:🥚15|43k|Demand:?/10</div>
-      <div class="text5">Chroma:🥚4|195k|Demand:?/10</div>
-      <div class="text6">Void:🥚1|O/C|Demand:?/10</div>
+      <div class="text3">Normal:🥚598|1.65k|Demand:?/10</div>
+      <div class="text4">Shiny:🥚78|12.5k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚14|71k|Demand:?/10</div>
+      <div class="text6">Void:🥚4|220K|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
@@ -694,10 +694,10 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130937120043843695/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Chocolate Sundae</div>
       <div class="text2">🍀 1 in 60.6 Million</div>
-      <div class="text3">Normal:🥚137|7.2k|Demand:?/10</div>
-      <div class="text4">Shiny:🥚16|42k|Demand:?/10</div>
-      <div class="text5">Chroma:🥚3|300K|Demand:?/10</div>
-      <div class="text6">Void:🥚1|O/C|Demand:?/10</div>
+      <div class="text3">Normal:🥚534|1.9k|Demand:?/10</div>
+      <div class="text4">Shiny:🥚71|13k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚11|90K|Demand:?/10</div>
+      <div class="text6">Void:🥚4|220K|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
@@ -709,10 +709,10 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130937173777055894/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Vanilla Sundae</div>
       <div class="text2">🍀 1 in 60.6 Million</div>
-      <div class="text3">Normal:🥚138|7.2k|Demand:?/10</div>
-      <div class="text4">Shiny:🥚24|37k|Demand:?/10</div>
-      <div class="text5">Chroma:🥚2|450k|Demand:?/10</div>
-      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text3">Normal:🥚564|1.8k|Demand:?/10</div>
+      <div class="text4">Shiny:🥚79|12.5k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚5|190k|Demand:?/10</div>
+      <div class="text6">Void:🥚1|O/C|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
@@ -724,11 +724,11 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130937225404747907/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Eternal Cucumber</div>
       <div class="text2">🍀 1 in 5 Million</div>
-      <div class="text3">Normal:🥚626|1.6K|Demand:?/10</div>
-      <div class="text4">Shiny:🥚60|15k|Demand:?/10</div>
-      <div class="text5">Chroma:🥚9|105K|Demand:?/10</div>
-      <div class="text6">Void:🥚2|450K|Demand:?/10</div>
-      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text3">Normal:🥚1626|600|Demand:?/10</div>
+      <div class="text4">Shiny:🥚164|6k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚26|38K|Demand:?/10</div>
+      <div class="text6">Void:🥚3|300K|Demand:?/10</div>
+      <div class="text7">Glitch:🥚1|O/C|Demand:?/10</div>
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
       <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
       <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
@@ -739,9 +739,9 @@
       <img src="https://media.discordapp.net/attachments/1110002620891938936/1130937281520345109/Png.png?width=131&height=131" alt="Cat">
       <div class="text1">Dragonfruit</div>
       <div class="text2">🍀 1 in 20 Million</div>
-      <div class="text3">Normal:🥚178|5.6k|Demand:?/10</div>
-      <div class="text4">Shiny:🥚11|70k|Demand:?/10</div>
-      <div class="text5">Chroma:🥚2|400K|Demand:?/10</div>
+      <div class="text3">Normal:🥚457|2.2k|Demand:?/10</div>
+      <div class="text4">Shiny:🥚42|24k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚4|220K|Demand:?/10</div>
       <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
       <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
       <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
@@ -749,7 +749,51 @@
       <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
       <div class="text11">Status:Dropping</div>
     </div>
-    
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1131034134849011752/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Coconut King</div>
+      <div class="text2">🍀 1 in 10 Million</div>
+      <div class="text3">Normal:🥚1935|510|Demand:?/10</div>
+      <div class="text4">Shiny:🥚265|3.7k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚29|34K|Demand:?/10</div>
+      <div class="text6">Void:🥚8|110K|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1131034162703388723/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Potassium Prince</div>
+      <div class="text2">🍀 1 in 80 Million</div>
+      <div class="text3">Normal:🥚234|4.2K|Demand:?/10</div>
+      <div class="text4">Shiny:🥚31|32k|Demand:?/10</div>
+      <div class="text5">Chroma:🥚1|O/C|Demand:?/10</div>
+      <div class="text6">Void:🥚0|N/A|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
+
+        <div class="box">
+      <img src="https://media.discordapp.net/attachments/1110002620891938936/1131034487342510130/Png.png?width=131&height=131" alt="Cat">
+      <div class="text1">Rune Robot</div>
+      <div class="text2">🍀 1 in 1 Billion</div>
+      <div class="text3">Normal:🥚22|45k|Demand:?/10</div>
+      <div class="text4">Shiny:🥚3|300K|Demand:?/10</div>
+      <div class="text5">Chroma:🥚0|N/A|Demand:?/10</div>
+      <div class="text6">Void:🥚1|O/C|Demand:?/10</div>
+      <div class="text7">Glitch:🥚0|N/A|Demand:?/10</div>
+      <div class="text8">Godly:🥚0|N/A|Demand:?/10</div>
+      <div class="text9">Supernova:🥚0|N/A|Demand:?/10</div>
+      <div class="text10">Blaze:🥚0|N/A|Demand:?/10</div>
+      <div class="text11">Status:Dropping</div>
+    </div>
     
   </div>
 </body>
