--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       text-align: center;
       color: black;
       font-size: 12px;
-      font-family: 'Comic Sans MS', cursive;
+      font-family: 'Comic Neue', cursive;
       margin-top: 5px;
     }
     
