--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>BGMValues</title>
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
   <link rel="icon" href="https://media.discordapp.net/attachments/1110002620891938936/1130265373833441310/799af81c2b891f8debb751f937ab2125.png?width=90&height=90" type="image/png"> <!-- Replace "icon.png" with the path to your icon image file -->
   <style>
     * {
