--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       font-size: 32px;
       color: white;
       margin-top: 10px;
-      font-family: 'Comic Sans MS', cursive;
+      font-family: 'Comic Neue', cursive;
     }
     
     /* Responsive layout */
